@@ -1,15 +1,7 @@
 package com.redis.om.spring.search.stream;
 
-import com.github.f4b6a3.ulid.Ulid;
-import com.github.f4b6a3.ulid.UlidCreator;
-import com.redis.om.spring.AbstractBaseDocumentTest;
-import com.redis.om.spring.fixtures.document.model.*;
-import com.redis.om.spring.fixtures.document.repository.*;
-import com.redis.om.spring.tuple.Fields;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.geo.Point;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertAll;
 
 import java.io.IOException;
 import java.text.ParseException;
@@ -19,10 +11,21 @@ import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.geo.Point;
 
-@SuppressWarnings("SpellCheckingInspection")
+import com.github.f4b6a3.ulid.Ulid;
+import com.github.f4b6a3.ulid.UlidCreator;
+import com.redis.om.spring.AbstractBaseDocumentTest;
+import com.redis.om.spring.fixtures.document.model.*;
+import com.redis.om.spring.fixtures.document.repository.*;
+import com.redis.om.spring.tuple.Fields;
+
+@SuppressWarnings(
+  "SpellCheckingInspection"
+)
 class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
   @Autowired
   SomeDocumentRepository someDocumentRepository;
@@ -69,48 +72,46 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
     }
 
     if (deepNestRepository.count() == 0) {
-      DeepNest dn1 = DeepNest.of("dn-1",
-          NestLevel1.of("nl-1-1", "Louis, I think this is the beginning of a beautiful friendship.",
-              NestLevel2.of("nl-2-1", "Here's looking at you, kid.")));
-      DeepNest dn2 = DeepNest.of("dn-2",
-          NestLevel1.of("nl-1-2", "Whoever you are, I have always depended on the kindness of strangers.",
-              NestLevel2.of("nl-2-2", "Hey, you hens! Cut out the cackling in there!")));
-      DeepNest dn3 = DeepNest.of("dn-3",
-          NestLevel1.of("nl-1-3", "A good body with a dull brain is as cheap as life itself.",
-              NestLevel2.of("nl-2-3", "I'm Spartacus!")));
+      DeepNest dn1 = DeepNest.of("dn-1", NestLevel1.of("nl-1-1",
+          "Louis, I think this is the beginning of a beautiful friendship.", NestLevel2.of("nl-2-1",
+              "Here's looking at you, kid.")));
+      DeepNest dn2 = DeepNest.of("dn-2", NestLevel1.of("nl-1-2",
+          "Whoever you are, I have always depended on the kindness of strangers.", NestLevel2.of("nl-2-2",
+              "Hey, you hens! Cut out the cackling in there!")));
+      DeepNest dn3 = DeepNest.of("dn-3", NestLevel1.of("nl-1-3",
+          "A good body with a dull brain is as cheap as life itself.", NestLevel2.of("nl-2-3", "I'm Spartacus!")));
       deepNestRepository.saveAll(List.of(dn1, dn2, dn3));
     }
 
     if (deepNestNonIndexedRepository.count() == 0) {
-      DeepNestNonIndexed dnni1 = DeepNestNonIndexed.of("dn-1",
-          NestLevelNonIndexed1.of("nl-1-1", "Louis, I think this is the beginning of a beautiful friendship.",
-              NestLevelNonIndexed2.of("nl-2-1", "Here's looking at you, kid.")));
-      DeepNestNonIndexed dnni2 = DeepNestNonIndexed.of("dn-2",
-          NestLevelNonIndexed1.of("nl-1-2", "Whoever you are, I have always depended on the kindness of strangers.",
-              NestLevelNonIndexed2.of("nl-2-2", "Hey, you hens! Cut out the cackling in there!")));
-      DeepNestNonIndexed dnni3 = DeepNestNonIndexed.of("dn-3",
-          NestLevelNonIndexed1.of("nl-1-3", "A good body with a dull brain is as cheap as life itself.",
-              NestLevelNonIndexed2.of("nl-2-3", "I'm Spartacus!")));
+      DeepNestNonIndexed dnni1 = DeepNestNonIndexed.of("dn-1", NestLevelNonIndexed1.of("nl-1-1",
+          "Louis, I think this is the beginning of a beautiful friendship.", NestLevelNonIndexed2.of("nl-2-1",
+              "Here's looking at you, kid.")));
+      DeepNestNonIndexed dnni2 = DeepNestNonIndexed.of("dn-2", NestLevelNonIndexed1.of("nl-1-2",
+          "Whoever you are, I have always depended on the kindness of strangers.", NestLevelNonIndexed2.of("nl-2-2",
+              "Hey, you hens! Cut out the cackling in there!")));
+      DeepNestNonIndexed dnni3 = DeepNestNonIndexed.of("dn-3", NestLevelNonIndexed1.of("nl-1-3",
+          "A good body with a dull brain is as cheap as life itself.", NestLevelNonIndexed2.of("nl-2-3",
+              "I'm Spartacus!")));
       deepNestNonIndexedRepository.saveAll(List.of(dnni1, dnni2, dnni3));
     }
 
     if (doc2Repository.count() == 0) {
       List<Doc2> doc2s = new ArrayList<>();
-      IntStream.range(0, 31)
-          .forEach(i -> doc2s.add(Doc2.of(String.format("Marca%s Modelo %s", i, i), String.format("COLOR %s", i))));
+      IntStream.range(0, 31).forEach(i -> doc2s.add(Doc2.of(String.format("Marca%s Modelo %s", i, i), String.format(
+          "COLOR %s", i))));
       doc2Repository.saveAll(doc2s);
     }
 
     if (deepListRepository.count() == 0) {
-      List<NestLevel2> list1 = List.of(NestLevel2.of("nl-1-1", "It's just a flesh wound!"),
-          NestLevel2.of("nl-1-2", "Nobody expects the Spanish Inquisition!"),
-          NestLevel2.of("nl-1-3", "I fart in your general direction!"));
-      List<NestLevel2> list2 = List.of(NestLevel2.of("nl-2-1", "We are the knights who say 'Ni!"),
-          NestLevel2.of("nl-2-2", "And now for something completely different."),
-          NestLevel2.of("nl-2-3", "What have the Romans ever done for us?"));
+      List<NestLevel2> list1 = List.of(NestLevel2.of("nl-1-1", "It's just a flesh wound!"), NestLevel2.of("nl-1-2",
+          "Nobody expects the Spanish Inquisition!"), NestLevel2.of("nl-1-3", "I fart in your general direction!"));
+      List<NestLevel2> list2 = List.of(NestLevel2.of("nl-2-1", "We are the knights who say 'Ni!"), NestLevel2.of(
+          "nl-2-2", "And now for something completely different."), NestLevel2.of("nl-2-3",
+              "What have the Romans ever done for us?"));
       List<NestLevel2> list3 = List.of(NestLevel2.of("nl-3-1", "I have a very silly job and I take it very seriously."),
-          NestLevel2.of("nl-3-2", "What's brown and sticky? A stick!"),
-          NestLevel2.of("nl-3-3", "I have a theory that the truth is never told during the nine-to-five hours."));
+          NestLevel2.of("nl-3-2", "What's brown and sticky? A stick!"), NestLevel2.of("nl-3-3",
+              "I have a theory that the truth is never told during the nine-to-five hours."));
       DeepList dl1 = DeepList.of("dn-1", list1);
       DeepList dl2 = DeepList.of("dn-2", list2);
       DeepList dl3 = DeepList.of("dn-3", list3);
@@ -223,15 +224,15 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
     Doc microsoft1 = docRepository.save(Doc.of("Microsoft", "wwwabcnet"));
     Doc microsoft2 = docRepository.save(Doc.of("Microsoft", "wwwxyzcom"));
 
-    var withFreeTextFirst = entityStream.of(Doc.class).filter("*co*").filter(Doc$.FIRST.eq("Microsoft"))
-        .collect(Collectors.toList());
+    var withFreeTextFirst = entityStream.of(Doc.class).filter("*co*").filter(Doc$.FIRST.eq("Microsoft")).collect(
+        Collectors.toList());
 
-    var withFreeTextLast = entityStream.of(Doc.class).filter(Doc$.FIRST.eq("Microsoft")).filter("*co*")
-        .collect(Collectors.toList());
+    var withFreeTextLast = entityStream.of(Doc.class).filter(Doc$.FIRST.eq("Microsoft")).filter("*co*").collect(
+        Collectors.toList());
 
     assertAll( //
-        () -> assertThat(withFreeTextLast).containsExactly(microsoft2),
-        () -> assertThat(withFreeTextFirst).containsExactly(microsoft2));
+        () -> assertThat(withFreeTextLast).containsExactly(microsoft2), () -> assertThat(withFreeTextFirst)
+            .containsExactly(microsoft2));
   }
 
   // issue gh-184
@@ -323,8 +324,8 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
         .collect(Collectors.toList());
 
     assertAll( //
-        () -> assertThat(results).hasSize(4),
-        () -> assertThat(results).extracting("id").containsExactly("doc-3", "doc-4", "doc-5", "doc-6"));
+        () -> assertThat(results).hasSize(4), () -> assertThat(results).extracting("id").containsExactly("doc-3",
+            "doc-4", "doc-5", "doc-6"));
   }
 
   @Test
@@ -334,8 +335,8 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
         .collect(Collectors.toList());
 
     assertAll( //
-        () -> assertThat(results).hasSize(3),
-        () -> assertThat(results).extracting("id").containsExactly("doc-4", "doc-5", "doc-6"));
+        () -> assertThat(results).hasSize(3), () -> assertThat(results).extracting("id").containsExactly("doc-4",
+            "doc-5", "doc-6"));
   }
 
   @Test
@@ -345,8 +346,8 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
         .collect(Collectors.toList());
 
     assertAll( //
-        () -> assertThat(results).hasSize(3),
-        () -> assertThat(results).extracting("id").containsExactly("doc-2", "doc-4", "doc-6"));
+        () -> assertThat(results).hasSize(3), () -> assertThat(results).extracting("id").containsExactly("doc-2",
+            "doc-4", "doc-6"));
   }
 
   @Test
@@ -356,8 +357,8 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
         .collect(Collectors.toList());
 
     assertAll( //
-        () -> assertThat(results).hasSize(3),
-        () -> assertThat(results).extracting("id").containsExactly("doc-1", "doc-2", "doc-3"));
+        () -> assertThat(results).hasSize(3), () -> assertThat(results).extracting("id").containsExactly("doc-1",
+            "doc-2", "doc-3"));
   }
 
   @Test
@@ -367,8 +368,8 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
         .collect(Collectors.toList());
 
     assertAll( //
-        () -> assertThat(results).hasSize(2),
-        () -> assertThat(results).extracting("id").containsExactly("doc-1", "doc-2"));
+        () -> assertThat(results).hasSize(2), () -> assertThat(results).extracting("id").containsExactly("doc-1",
+            "doc-2"));
   }
 
   @Test
@@ -378,8 +379,8 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
         .collect(Collectors.toList());
 
     assertAll( //
-        () -> assertThat(results).hasSize(4),
-        () -> assertThat(results).extracting("id").containsExactly("doc-2", "doc-3", "doc-4", "doc-5"));
+        () -> assertThat(results).hasSize(4), () -> assertThat(results).extracting("id").containsExactly("doc-2",
+            "doc-3", "doc-4", "doc-5"));
   }
 
   @Test
@@ -389,8 +390,8 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
         .collect(Collectors.toList());
 
     assertAll( //
-        () -> assertThat(results).hasSize(5),
-        () -> assertThat(results).extracting("id").containsExactly("doc-1", "doc-2", "doc-3", "doc-4", "doc-6"));
+        () -> assertThat(results).hasSize(5), () -> assertThat(results).extracting("id").containsExactly("doc-1",
+            "doc-2", "doc-3", "doc-4", "doc-6"));
   }
 
   // issue gh-264 SCENARIO 1
@@ -401,8 +402,8 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
     personWithoutEmail.setEmail(null);
     personRepository.save(personWithoutEmail);
 
-    var result = entityStream.of(Person.class).filter(Person$.NAME.eq("PersonWithoutEmail"))
-        .map(Fields.of(Person$.NAME, Person$.EMAIL)) // should handle empty email as mapped return value
+    var result = entityStream.of(Person.class).filter(Person$.NAME.eq("PersonWithoutEmail")).map(Fields.of(Person$.NAME,
+        Person$.EMAIL)) // should handle empty email as mapped return value
         .collect(Collectors.toList()).stream().findFirst().get();
     assertThat(result.getFirst()).isEqualTo("PersonWithoutEmail");
     assertThat(result.getSecond()).isEqualTo(null);
@@ -411,8 +412,8 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
   // issue gh-264 SCENARIO 2
   @Test
   void testMapEntityStreamsReturnNestedField() {
-    var results = entityStream.of(DeepNest.class).filter(DeepNest$.NEST_LEVEL1_NEST_LEVEL2_NAME.eq("nl-2-2"))
-        .map(DeepNest$.NEST_LEVEL1_NEST_LEVEL2_NAME) // should handle nested property as mapped return value
+    var results = entityStream.of(DeepNest.class).filter(DeepNest$.NEST_LEVEL1_NEST_LEVEL2_NAME.eq("nl-2-2")).map(
+        DeepNest$.NEST_LEVEL1_NEST_LEVEL2_NAME) // should handle nested property as mapped return value
         .collect(Collectors.toList());
     assertThat(results).containsOnly("nl-2-2");
   }
@@ -424,8 +425,8 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
     docWithBoolean.setIndexedBoolean(true);
     docWithBooleanRepository.save(docWithBoolean);
 
-    var result = entityStream.of(DocWithBoolean.class).filter(DocWithBoolean$.ID.eq(docWithBoolean.getId()))
-        .map(DocWithBoolean$.INDEXED_BOOLEAN) // should handle returned indexed boolean value, but fails
+    var result = entityStream.of(DocWithBoolean.class).filter(DocWithBoolean$.ID.eq(docWithBoolean.getId())).map(
+        DocWithBoolean$.INDEXED_BOOLEAN) // should handle returned indexed boolean value, but fails
         .collect(Collectors.toList());
     assertThat(result).containsOnly(true);
   }
@@ -438,7 +439,7 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
     docWithBooleanRepository.save(docWithBoolean);
 
     var result = entityStream.of(DocWithBoolean.class).filter(DocWithBoolean$.ID.eq(docWithBoolean.getId())).map(
-            DocWithBoolean$.INDEXED_PRIMITIVE_BOOLEAN) // should handle returned indexed boolean primitive value, but fails
+        DocWithBoolean$.INDEXED_PRIMITIVE_BOOLEAN) // should handle returned indexed boolean primitive value, but fails
         .collect(Collectors.toList());
     assertThat(result).containsOnly(true);
   }
@@ -450,8 +451,8 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
     docWithBoolean.setNonIndexedBoolean(true);
     docWithBooleanRepository.save(docWithBoolean);
 
-    var result = entityStream.of(DocWithBoolean.class).filter(DocWithBoolean$.ID.eq(docWithBoolean.getId()))
-        .map(DocWithBoolean$.NON_INDEXED_BOOLEAN) // should handle returned non indexed boolean value, succeeds
+    var result = entityStream.of(DocWithBoolean.class).filter(DocWithBoolean$.ID.eq(docWithBoolean.getId())).map(
+        DocWithBoolean$.NON_INDEXED_BOOLEAN) // should handle returned non indexed boolean value, succeeds
         .collect(Collectors.toList());
     assertThat(result).containsOnly(true);
   }
@@ -464,7 +465,7 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
     docWithBooleanRepository.save(docWithBoolean);
 
     var result = entityStream.of(DocWithBoolean.class).filter(DocWithBoolean$.ID.eq(docWithBoolean.getId())).map(
-            DocWithBoolean$.NON_INDEXED_PRIMITIVE_BOOLEAN) // should handle returned non indexed primitive boolean primitive value, but fails
+        DocWithBoolean$.NON_INDEXED_PRIMITIVE_BOOLEAN) // should handle returned non indexed primitive boolean primitive value, but fails
         .collect(Collectors.toList());
     assertThat(result).containsOnly(true);
   }
@@ -503,20 +504,19 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
     var allFields = Fields.of( //
         KitchenSink$.LOCAL_DATE, KitchenSink$.LOCAL_DATE_TIME, KitchenSink$.DATE, KitchenSink$.POINT, KitchenSink$.ULID,
         KitchenSink$.SET_THINGS, KitchenSink$.LIST_THINGS);
-    var result = entityStream.of(KitchenSink.class).filter(KitchenSink$.ID.eq("ks0")).map(allFields)
-        .collect(Collectors.toList());
+    var result = entityStream.of(KitchenSink.class).filter(KitchenSink$.ID.eq("ks0")).map(allFields).collect(Collectors
+        .toList());
 
     assertThat(result).hasSize(1);
 
     var ksValues = result.get(0);
 
     assertAll( //
-        () -> assertThat(ksValues.getFirst()).isEqualTo(localDate),
-        () -> assertThat(ksValues.getSecond()).isEqualToIgnoringNanos(localDateTime),
-        () -> assertThat(ksValues.getThird()).isEqualTo(date), () -> assertThat(ksValues.getFourth()).isEqualTo(point),
-        () -> assertThat(ksValues.getFifth()).isEqualTo(ulid),
-        () -> assertThat(ksValues.getSixth()).containsExactlyInAnyOrderElementsOf(setThings),
-        () -> assertThat(ksValues.getSeventh()).containsExactlyInAnyOrderElementsOf(listThings));
+        () -> assertThat(ksValues.getFirst()).isEqualTo(localDate), () -> assertThat(ksValues.getSecond())
+            .isEqualToIgnoringNanos(localDateTime), () -> assertThat(ksValues.getThird()).isEqualTo(date),
+        () -> assertThat(ksValues.getFourth()).isEqualTo(point), () -> assertThat(ksValues.getFifth()).isEqualTo(ulid),
+        () -> assertThat(ksValues.getSixth()).containsExactlyInAnyOrderElementsOf(setThings), () -> assertThat(ksValues
+            .getSeventh()).containsExactlyInAnyOrderElementsOf(listThings));
   }
 
   @Test
@@ -524,19 +524,18 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
     var allFields = Fields.of( //
         KitchenSink$.LOCAL_DATE, KitchenSink$.LOCAL_DATE_TIME, KitchenSink$.DATE, KitchenSink$.POINT, KitchenSink$.ULID,
         KitchenSink$.SET_THINGS, KitchenSink$.LIST_THINGS);
-    var result = entityStream.of(KitchenSink.class).filter(KitchenSink$.ID.eq("ks1")).map(allFields)
-        .collect(Collectors.toList());
+    var result = entityStream.of(KitchenSink.class).filter(KitchenSink$.ID.eq("ks1")).map(allFields).collect(Collectors
+        .toList());
 
     assertThat(result).hasSize(1);
 
     var ksValues = result.get(0);
 
     assertAll( //
-        () -> assertThat(ksValues.getFirst()).isEqualTo(localDate),
-        () -> assertThat(ksValues.getSecond()).isEqualToIgnoringNanos(localDateTime),
-        () -> assertThat(ksValues.getThird()).isEqualTo(date), () -> assertThat(ksValues.getFourth()).isEqualTo(point),
-        () -> assertThat(ksValues.getFifth()).isEqualTo(ulid), () -> assertThat(ksValues.getSixth()).isNull(),
-        () -> assertThat(ksValues.getSeventh()).isNull());
+        () -> assertThat(ksValues.getFirst()).isEqualTo(localDate), () -> assertThat(ksValues.getSecond())
+            .isEqualToIgnoringNanos(localDateTime), () -> assertThat(ksValues.getThird()).isEqualTo(date),
+        () -> assertThat(ksValues.getFourth()).isEqualTo(point), () -> assertThat(ksValues.getFifth()).isEqualTo(ulid),
+        () -> assertThat(ksValues.getSixth()).isNull(), () -> assertThat(ksValues.getSeventh()).isNull());
   }
 
   @Test
@@ -545,19 +544,18 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
         KitchenSink$.LOCAL_DATE, KitchenSink$.LOCAL_DATE_TIME, KitchenSink$.DATE, KitchenSink$.POINT, KitchenSink$.ULID,
         KitchenSink$.SET_THINGS, KitchenSink$.LIST_THINGS);
 
-    var result = entityStream.of(KitchenSink.class).filter(KitchenSink$.ID.eq("ks2")).map(allFields)
-        .collect(Collectors.toList());
+    var result = entityStream.of(KitchenSink.class).filter(KitchenSink$.ID.eq("ks2")).map(allFields).collect(Collectors
+        .toList());
 
     assertThat(result).hasSize(1);
 
     var ksValues = result.get(0);
 
     assertAll( //
-        () -> assertThat(ksValues.getFirst()).isEqualTo(localDate),
-        () -> assertThat(ksValues.getSecond()).isEqualToIgnoringNanos(localDateTime),
-        () -> assertThat(ksValues.getThird()).isEqualTo(date), () -> assertThat(ksValues.getFourth()).isEqualTo(point),
-        () -> assertThat(ksValues.getFifth()).isEqualTo(ulid), () -> assertThat(ksValues.getSixth()).isNull(),
-        () -> assertThat(ksValues.getSeventh()).isNull());
+        () -> assertThat(ksValues.getFirst()).isEqualTo(localDate), () -> assertThat(ksValues.getSecond())
+            .isEqualToIgnoringNanos(localDateTime), () -> assertThat(ksValues.getThird()).isEqualTo(date),
+        () -> assertThat(ksValues.getFourth()).isEqualTo(point), () -> assertThat(ksValues.getFifth()).isEqualTo(ulid),
+        () -> assertThat(ksValues.getSixth()).isNull(), () -> assertThat(ksValues.getSeventh()).isNull());
   }
 
   @Test
@@ -565,8 +563,8 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
     var allFields = Fields.of( //
         DeepNest$.NAME, DeepNest$.NEST_LEVEL1_NAME, DeepNest$.NEST_LEVEL1_BLOCK, DeepNest$.NEST_LEVEL1_NEST_LEVEL2_NAME,
         DeepNest$.NEST_LEVEL1_NEST_LEVEL2_BLOCK);
-    var result = entityStream.of(DeepNest.class).filter(DeepNest$.NAME.eq("dn-1")).map(allFields)
-        .collect(Collectors.toList());
+    var result = entityStream.of(DeepNest.class).filter(DeepNest$.NAME.eq("dn-1")).map(allFields).collect(Collectors
+        .toList());
 
     assertThat(result).hasSize(1);
 
@@ -575,9 +573,8 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
     assertAll( //
         () -> assertThat(values.getFirst()).isEqualTo("dn-1"), () -> assertThat(values.getSecond()).isEqualTo("nl-1-1"),
         () -> assertThat(values.getThird()).isEqualTo(
-            "Louis, I think this is the beginning of a beautiful friendship."),
-        () -> assertThat(values.getFourth()).isEqualTo("nl-2-1"),
-        () -> assertThat(values.getFifth()).isEqualTo("Here's looking at you, kid."));
+            "Louis, I think this is the beginning of a beautiful friendship."), () -> assertThat(values.getFourth())
+                .isEqualTo("nl-2-1"), () -> assertThat(values.getFifth()).isEqualTo("Here's looking at you, kid."));
   }
 
   @Test
@@ -595,9 +592,8 @@ class EntityStreamsIssuesTest extends AbstractBaseDocumentTest {
     assertAll( //
         () -> assertThat(values.getFirst()).isEqualTo("dn-1"), () -> assertThat(values.getSecond()).isEqualTo("nl-1-1"),
         () -> assertThat(values.getThird()).isEqualTo(
-            "Louis, I think this is the beginning of a beautiful friendship."),
-        () -> assertThat(values.getFourth()).isEqualTo("nl-2-1"),
-        () -> assertThat(values.getFifth()).isEqualTo("Here's looking at you, kid."));
+            "Louis, I think this is the beginning of a beautiful friendship."), () -> assertThat(values.getFourth())
+                .isEqualTo("nl-2-1"), () -> assertThat(values.getFifth()).isEqualTo("Here's looking at you, kid."));
   }
 
   @Test
